Fixed performance for pages like the timeline, explore page and profile (e.g. any page that could render a lightbox/modal). The old method locked the scroll of the page when the light box was open by setting the #root to fixed then keeping track of the Y position the user scrolled to in order to restore their position when the lightbox was closed. This code to keep track of the Y position ran for each lightbox on the page. A simpler solution is just to add overflowY hidden on the html element

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -6,12 +6,10 @@
 		transform: translate(-50%, -50%);
 	}
 	.lightbox-open {
-		/* overflow-y: hidden; */
-		filter: blur(2px);
-		position: fixed;
+		filter: blur(2px) brightness(50%);
 		width: 100vw;
-		/* overflow:hidden; */
 		pointer-events: none;
+		overflow: hidden;
 	}
 	.comment-grow {
 		flex-grow: 5;
